Bug 178953 - date/time tab's content does not use available width
Summary: date/time tab's content does not use available width
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_language (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Hans Petter Bieker
URL:
Keywords:
: 179215 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-28 12:12 UTC by S. Burmeister
Modified: 2009-04-10 22:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (50.49 KB, image/png)
2008-12-28 12:13 UTC, S. Burmeister
Details

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2008-12-28 12:12:46 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

The widgets do not expand, see attached screenshot.
Comment 1 S. Burmeister 2008-12-28 12:13:09 UTC
Created attachment 29693 [details]
screenshot
Comment 2 FiNeX 2008-12-28 23:40:03 UTC
SVN commit 902668 by finex:

Converted localetime interface to .ui in order to have a more polished interface.

BUG: 178953



 M  +1 -1      CMakeLists.txt  
 M  +156 -194  localetime.cpp  
 M  +3 -19     localetime.h  
 A             localetime.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=902668
Comment 3 Nick Shaforostoff 2008-12-31 01:52:03 UTC
you introduced another bug: widget have weird labels now, as labels are read from objectname, not text/title properties. to fix it, add smth like

    const QList<QWidget*> &list = findChildren<QWidget*>();
    foreach ( QObject* wc, list )
    {
        QString text;
        if (::qstrcmp(wc->metaObject()->className(), "QLabel") == 0)
            text=static_cast<QLabel*>(wc)->text();
        else if (::qstrcmp(wc->metaObject()->className(), "QGroupBox") == 0 )
            text=static_cast<QGroupBox*>(wc)->title();
        else if (::qstrcmp(wc->metaObject()->className(), "QCheckBox") == 0)
            text=static_cast<QCheckBox*>(wc)->text();

        wc->setObjectName(text);
        qWarning()<<text;
    }

to c'tor. but you have to find out how to build ui form using C locale for this to work.
Comment 4 FiNeX 2008-12-31 11:25:02 UTC
That problem has been introduced by another commit (not mine), I'm looking to fix it.
Comment 5 FiNeX 2008-12-31 15:58:47 UTC
*** Bug 179215 has been marked as a duplicate of this bug. ***
Comment 6 FiNeX 2008-12-31 16:02:37 UTC
*** Bug 179218 has been marked as a duplicate of this bug. ***
Comment 7 FiNeX 2009-01-04 18:20:45 UTC
SVN commit 905582 by finex:

Reverted to the previous version (removed .ui file) for localetime.
The bug #178953 should be fixed in another way. Sorry for the buzz.

CCBUG: 178953



 M  +1 -1      CMakeLists.txt  
 M  +49 -14    localetime.cpp  
 M  +20 -3     localetime.h  
 D             localetime.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=905582
Comment 8 SlashDevDsp 2009-01-09 08:08:19 UTC
still having the width problems with trunk compiled about 5hrs ago with:
qt-copy:907984, kdebase:907985 and kdelibs: 907985
Comment 9 Dario Andres 2009-04-10 22:13:33 UTC
SVN commit 952067 by darioandres:

Use a standard QHBoxLayout instead of a QFormLayour for two groupboxes
Fixes a layouting issue
(The dialog may still need some work to be perfect anyways)

BUG: 178953


 M  +5 -1      localetime.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952067
Comment 10 Dario Andres 2009-04-10 22:15:54 UTC
SVN commit 952068 by darioandres:

Backport to 4.2branch of:

SVN commit 952067 by darioandres:

Use a standard QHBoxLayout instead of a QFormLayout for two groupboxes
Fixes a layouting issue
(The dialog may still need some work to be perfect anyways)

CCBUG: 178953


 M  +5 -1      localetime.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952068