Converted localetime interface to .ui in order to have a more polished interface.

BUG: 178953


svn path=/trunk/KDE/kdebase/runtime/; revision=902668