kcontrol/locale/localetime.h
@@ -25,6 +25,8 @@
 #ifndef LOCALETIME_H
 #define LOCALETIME_H
 
+#include "ui_localetime.h"
+
 #include <QWidget>
 
 #include <QMap>
@@ -36,7 +38,7 @@ class KLocale;
 
 class StringPair;
 
-class KLocaleConfigTime : public QWidget
+class KLocaleConfigTime : public QWidget, Ui::localetime
 {
   Q_OBJECT
 
@@ -88,24 +90,6 @@ private:
 
   KLocale *m_locale;
 
-  // Time & dates
-  QLabel *m_labTimeFmt;
-  QComboBox *m_comboTimeFmt;
-  QLabel *m_labDateFmt;
-  QComboBox * m_comboDateFmt;
-  QLabel *m_labDateFmtShort;
-  QComboBox * m_comboDateFmtShort;
-//   QLabel * m_labWeekStartDay;
-  QComboBox * m_comboWeekStartDay;
-//   QLabel * m_labWorkingWeekStartDay;
-  QComboBox * m_comboWorkingWeekStartDay;
-//   QLabel * m_labWorkingWeekEndDay;
-  QComboBox * m_comboWorkingWeekEndDay;
-//   QLabel * m_labWeekDayOfPray;
-  QComboBox * m_comboWeekDayOfPray;
-  QCheckBox *m_chDateMonthNamePossessive;
-//   QLabel * m_labCalendarSystem;
-  QComboBox * m_comboCalendarSystem;
 };
 
 #endif // LOCALETIME_H
